--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Import Comic Neue from Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
-
 * {
-  font-family: 'Patrick Hand', cursive;
+  font-family: 'Comic Sans MS', cursive, sans-serif;
 }
